# text-to-motion-diploma

./: .gitignore  README.md  pyproject.toml
models/: README.md  mdm.py  metrics_history.json  train_eval.py
models/mdm/: bert_encoder.py  cfg_sampler.py  config.py  mdm.py  rotation2xyz.py  rotation_conversions.py  smpl.py  utils.py
src/: display.py  graph_heatmaps.py  model_comparing.ipynb
viewer/: __main__.py
