[project]
name = "text-to-motion-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "ftfy>=6.3.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyrefly>=0.58.0",
    "regex>=2026.3.32",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "smplx>=0.1.28",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
